# cwmtt

./: .gitignore  README.md  cwmtt.cabal  notation.md  proof  stack.yaml
Game/Chess/TimeTravel/: BFS.hs  BuildGame.hs  Datatypes.hs  Evaluation.hs  FastCheckMate.hs  FastCheckMate.lhs  FastCheckMateTmp.hs  FastCheckmate.lhs  FastCheckmateSat.lhs  FastCheckmateTmp.hs  Layouts.hs  Main.hs  Matching.hs  Moves.hs  PGNParser.hs  Parser.hs  Printing.hs  SAT.hs  Utils.hs  Wasm.hs
speedtest/: 0d84847.txt  8dc503e.txt  de2c664.txt  runtest.sh  savetest.sh
tests/: JustKings.5dpgn  castling.tn  corr1.txt  correctness.sh  correctnessTest.sh  debug.5dpgn  debug2.5dpgn  debug3.5dpgn  debug4.5dpgn  game.tn  performanceTest.sh  savetest.sh  smallTest.5dpgn  tesseractMageOChicken.5dpgn  timelines.tn
tests/5dpgn/: 100_timelines.5dpgn  chessin5d-illegal-move-example.5dpgn  ctp1.5dpgn  ctp2.5dpgn  exiledKings.5dpgn  hcsearchFailure.5dpgn  jsFailure.5dpgn  many2.5dpgn  manyChecks.5dpgn  niceAndrey.5dpgn  small.5dpgn  smallTest.5dpgn  standard.5dpgn  test1.5dpgn
tests/brawnsPuzzles/: another.5dpgn
tests/checkmate/: NP.5dpgn  NP0.5dpgn  another.5dpgn  futures.5dpgn  silly.5dpgn  test1.5dpgn  wide.5dpgn
tests/results/: 2021-06-20T212402@ac2dfef.txt  2026-05-18T030055@90e4970.txt  24243b8.txt  2437221.txt  6e076c1.txt  Correctness.txt  e13ea94.txt
tests/tn/: play.tn  sample1.tn  sample2.tn
wasm/: cwmtt.wasm  cwmttcheckmate.wasm  cwmttwasm.wasm  game.html  index.html  multiplayer.js
