-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                cwmtt
version:             0.0.0.0
-- synopsis:
description:
  A library for working with the game "5D chess with multiverse time travel"
license:             BSD3
license-file:        LICENSE
author:              Toby Cathcart Burn
maintainer:          tcathcartburn@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Game.Chess.TimeTravel.Moves
    , Game.Chess.TimeTravel.Datatypes
    , Game.Chess.TimeTravel.Utils
    , Game.Chess.TimeTravel.Layouts
    , Game.Chess.TimeTravel.Parser
    , Game.Chess.TimeTravel.PGNParser
    , Game.Chess.TimeTravel.Printing
    , Game.Chess.TimeTravel.BuildGame
    , Game.Chess.TimeTravel.FastCheckmate
    , Game.Chess.TimeTravel.FastCheckmateTmp
    , Game.Chess.TimeTravel.FastCheckmateSat
    , Game.Chess.TimeTravel.SAT
  build-depends:
      base
    , containers
    , z3
  default-language:
    Haskell2010

executable cwmtt
  hs-source-dirs:
    Game/Chess/TimeTravel
  main-is:
    Main.hs
  build-depends:
      base
    , cwmtt
  other-modules:
  default-language:
    Haskell2010



-- test-suite tests
--   type: exitcode-stdio-1.0
--   main-is: Tests.hs
--   build-depends: base,lens,random-shuffle, transformers, containers, random, Bartok, split, text, case-insensitive
--   default-language:    Haskell2010
--   other-modules: Lib,Sample,Datatypes
--   hs-source-dirs: test
